Update oop exercises